[project]
name = "geovectorsfork"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.8"
dependencies = [
    'numpy',
    'osmium',
    'setproctitle',
    'tqdm',
    'pandas',
    'nodevectors',
    'haversine',
    'joblib',
    'fasttext',
    'numba',
    'csrgraph',
    'scipy',
    'psycopg2-binary'
]
